# vpp-rl-agent

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  project_context.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: logging_config.py
src/agent/: __init__.py  train.py
src/api/: __init__.py  main.py
src/db/: __init__.py  database.py
src/env/: __init__.py  vpp_env.py
src/features/: engineer.py
src/ingestion/: __init__.py  elexon_client.py  neso_client.py  synthetic.py
tests/: test_api.py  test_db.py  test_env.py  test_features.py  test_ingestion.py  test_train.py
